--- a/module/Application/view/application/user/loginsuccess.phtml
+++ b/module/Application/view/application/user/loginsuccess.phtml
@@ -1,4 +1,4 @@
 Login Success.
 <br />
 
-<a href="<?php echo $this->url('login/process', array('action'=>'logout')); ?>">Logout</a>
+<a href="<?php echo $this->url('user/process', array('action'=>'logout')); ?>">Logout</a>
