--- a/module/Application/view/application/user/login.phtml
+++ b/module/Application/view/application/user/login.phtml
@@ -16,6 +16,7 @@ echo $this->formElementErrors($form->get('email'), array('class' => 'text-error'
 
 echo $this->formRow($form->get('email'));
 echo $this->formRow($form->get('password'));
+echo $this->formRow($form->get('rememberme'));
 echo $this->formRow($form->get('submit'));
 echo $this->form()->closeTag();
 
