--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -39,6 +39,16 @@
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
                     </ul>
+
+                    <?php if($this->identity()) { ?>
+                    <ul class="nav navbar-nav">
+                        <li><a href="#"><?php echo $this->identity()->username; ?></a></li>
+                    </ul>
+                    <!-- display the 'display name' of the user -->
+                    <ul class="nav navbar-nav">
+                        <li><a href="<?php echo $this->url('user/process', array('action'=>'logout')); ?>"><?php echo $this->translate('Log out') ?></a></li>
+                    </ul>
+                    <?php } ?>
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
